Remove Eşya Depolama service and add specific service areas to address section

--- a/index.html
+++ b/index.html
@@ -95,14 +95,6 @@
                         <img src="3.jpg" alt="Ofis Taşımacılığı" loading="lazy">
                     </div>
                     
-                    <div class="service-card">
-                        <div class="service-icon">
-                            <i class="fas fa-warehouse"></i>
-                        </div>
-                        <h3>Eşya Depolama</h3>
-                        <p>Güvenli ve iklim kontrollü depolama tesislerimizde eşyalarınızı güvenle saklıyoruz. İhtiyacınız olduğunda anında erişim sağlıyoruz.</p>
-                        <img src="4.jpg" alt="Eşya Depolama" loading="lazy">
-                    </div>
                 </div>
             </div>
         </section>
@@ -234,6 +226,7 @@
                             <div class="contact-details">
                                 <h3>Adres</h3>
                                 <p>Türkiye geneli hizmet veriyoruz</p>
+                                <p><strong>Özellikle:</strong> Kadıköy, Fenerbahçe, Çiftehavuzlar, Göztepe, Erenköy, Suadiye, Bostancı</p>
                             </div>
                         </div>
                     </div>
@@ -270,7 +263,6 @@
                     <ul>
                         <li>Evden Eve Nakliyat</li>
                         <li>Ofis Taşımacılığı</li>
-                        <li>Eşya Depolama</li>
                         <li>Yük Taşıma</li>
                     </ul>
                 </div>
